Revert "Line number instead of char for verify no match"
This reverts commit 5e9ba586ce6cba31bbabdc4e4f4586d44843712d.